# tekla-rd-ai-agent

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  docker-compose.mvp.yml  pyproject.toml
configs/: eval-tasks.example.jsonl  models.yaml  rag-sources.yaml  tools-policy.yaml
data/: README.md
data/models/: manifest.example.json
deploy/nginx/: README.md  agent.conf
deploy/ollama/: Modelfile.qwen-coder-14b-24gb  Modelfile.qwen-coder-7b-12gb
deploy/systemd/: tekla-agent.service
docs/: airgap-readiness-checklist.md  airgap-supply-chain.md  architecture.html  architecture.md  component-baseline.md  deployment-runbook.html  deployment-runbook.md  evaluation.md  index.html  industrial-rollout-plan.html  meeting-brief.md  rag-corpus-spec.md  security-policy.html  security-policy.md
docs/assets/: site.css
docs/bpmn/: README.md  airgap-rollout.bpmn  chat-tool-approval.bpmn  rag-ingestion.bpmn
examples/: requests.http
prompts/: system.md
scripts/: bootstrap_ubuntu_gpu.sh  chunk_corpus.py  prepare_airgap_bundle.ps1  run_eval.py  serve_model.py
services/orchestrator/: Dockerfile
services/orchestrator/tekla_agent/: __init__.py  approval.py  audit.py  config.py  llm.py  main.py  policy.py  rag.py  screening.py  tools.py
src/: README.md
src/TeklaAgent.Contracts/: TeklaAgent.Contracts.csproj  ToolDtos.cs
src/TeklaWorkstationHost/: Program.cs  README.md  TeklaWorkstationHost.csproj
tests/: test_api.py  test_approval.py  test_audit.py  test_policy.py  test_rag.py  test_screening.py  test_serve_model.py  test_tools.py
