[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tekla-rd-agent-mvp"
version = "0.2.0"
description = "Local air-gapped AI agent MVP for Tekla/RD workflows"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]
rag = [
  "qdrant-client>=1.11",
]

[tool.setuptools.packages.find]
where = ["services/orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["services/orchestrator", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

